base/notebook-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4.0-bionic
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: note-service
  labels:
    app: note-service
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: note-service
  ports:
    - name: api
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-service-deployment
  labels:
    app: note-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: note-service
  template:
    metadata:
      labels:
        app: note-service
    spec:
      containers:
        - name: note-service
          image: noteservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: application-config
              mountPath: "/workspace/config/"
              readOnly: true
      volumes:
        - name: application-config
          configMap:
            name: note-service-application-properties
            items:
              - key: mongo.properties
                path: application.properties
