base/notebook-oauth.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth
spec:
  selector:
    app: oauth
  ports:
    - name: http-web
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oauth
spec:
  serviceName: oauth
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:11.0.1
          args: ["-b", "0.0.0.0", "-c", "standalone.xml"]
          ports:
            - name: http-web
              containerPort: 8080
            - name: https-web
              containerPort: 8443
          startupProbe:
            initialDelaySeconds: 20
            exec:
              command: ["curl", "-f", "http://localhost:9990/health"]
          volumeMounts:
            - name: notebook-realm-config-vol
              mountPath: "/tmp/"
              readOnly: true
      volumes:
        - name: notebook-realm-config-vol
          configMap:
            name: notebook-realm-config
            items:
              - key: notebook-realm.json
                path: notebook-realm.json
