base/notebook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  selector:
    app: notes
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes
  labels:
    app: notes
spec:
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes
          image: notebook/note-service
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: application-config
              mountPath: "/workspace/config/"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
      volumes:
        - name: application-config
          configMap:
            name: notes-application-properties
            items:
              - key: notes-application.properties
                path: application.properties
