base/notebook-smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp
spec:
  selector:
    app: smtp
  ports:
  - name: tcp-smtp
    port: 25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp
  labels:
    app: smtp
spec:
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
        - name: smtp
          image: namshi/smtp
          ports:
            - name: tcp-smtp
              containerPort: 25
