base/notebook-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notebook-ingress
spec:
  rules:
  - host: notebook.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: oauth
          servicePort: 80
      - path: /note
        backend:
          serviceName: notes
          servicePort: 80
      - path: /
        backend:
            serviceName: notes-app
            servicePort: 80
